Small fix for cut off search bars

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -359,7 +359,7 @@ textarea {
 
 .search-bar {
     width: 100%;
-    padding: 0 $spacing-sm;
+    padding: 4px $spacing-sm 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
